Default roles and several CSS fixes

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ LOG_CHANNEL=daily
 # DB_CONNECTION=sqlite
 # DB_DATABASE=/home/frank/fdatbp/database/db.sqlite
 
+# Email addresses of users who will be granted the lecturer role immediately at registration
+LECTURERS="teacher123@mail.com,schoolmaster@mail.com"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
