--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ LOG_CHANNEL=daily
 
 # Email addresses of users who will be granted the lecturer role immediately at registration
 LECTURERS="teacher123@mail.com,schoolmaster@mail.com"
+SCOUT_DRIVER=tntsearch
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
