--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "fideloper/proxy": "^4.0",
         "hieu-le/active": "^3.5",
         "laravel/framework": "5.6.*",
+        "laravel/scout": "^5.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
         "spatie/laravel-html": "^2.4",
         "spatie/laravel-permission": "^2.5",
+        "teamtnt/laravel-scout-tntsearch-driver": "^3.2",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
